--- a/automation/ansible/play.yml
+++ b/automation/ansible/play.yml
@@ -11,6 +11,8 @@
        lighthouse: "{{ groups['lighthouse'] }}"
        etcd_version: "3.2.7"
        docker_compose_version: "1.16.1"
+       admin_user: "admin"
+       admin_password: "password"
   tasks:
   - name: install python 2
     raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
@@ -91,7 +93,7 @@
     when: inventory_hostname in groups['lighthouse']
   - name: Get Cluster Token
     shell: |
-      curl -XPOST -H 'Accept:application/json' -H 'Authorization:Basic cG9ydHdvcnhAeW91cmNvbXBhbnkuY29tOmFkbWlu'  http://{{ hostvars[groups['lighthouse'][0]].IP }}/api/clusters/create/\?name\=my-cluster\&clusterid\=my-cluster
+      curl -XPOST -H 'Accept:application/json' -H 'Authorization:Basic cG9ydHdvcnhAeW91cmNvbXBhbnkuY29tOmFkbWlu'  http://{{ hostvars[groups['lighthouse'][0]].IP }}/api/clusters/create/\?name\=my-cluster\&clusterid\=my-cluster1
     register: token
     when: inventory_hostname in groups['lighthouse']
   - debug: msg="{{ token.stdout_lines[0] }}"
