--- a/aws/hashi-porx/Vagrantfile
+++ b/aws/hashi-porx/Vagrantfile
@@ -4,8 +4,8 @@
 
 MEM=2048
 CPU=2
-DISK_SIZE = 10*1024
-HDD = "sdb"
+DISK_SIZE = 15*1024
+HDD = "sdc"
 
 boxes = [
     {
@@ -27,7 +27,7 @@ $script = <<SCRIPT
 
 sudo apt-get -y install wget unzip
 
-if ! docker --version
+if ! docker --version > /dev/null 2>&1
 then
    echo "Installing Docker..."
    curl -fsL http://get.docker.com | sh
@@ -42,6 +42,8 @@ SCRIPT
 
 Vagrant.configure(2) do |config|
 
+  config.vm.provider "virtualbox"
+
   config.vm.box = "ubuntu/xenial64"
 
   join_string = ""
@@ -51,7 +53,7 @@ Vagrant.configure(2) do |config|
   puts "Static IP Addrs are : #{join_string}"
 
 
-  boxes.each do |opts|
+  boxes.each_with_index do |opts, idx|
     config.vm.define opts[:name] do |config|
       config.vm.hostname = opts[:name]
       vdisk_name = ".vagrant/#{opts[:name]}_#{HDD}.vdi"
@@ -61,6 +63,7 @@ Vagrant.configure(2) do |config|
         unless File.exist?(vdisk_name)
            v.customize ['createhd', '--filename', vdisk_name, '--size', DISK_SIZE ]
            v.customize ['storageattach', :id, '--storagectl', "SCSI", '--port', 2, '--device', 0, '--type', 'hdd', '--medium', vdisk_name]
+           v.customize [ "modifyvm", :id, "--uartmode1", "disconnected" ]
         end
       end
  
@@ -70,14 +73,18 @@ Vagrant.configure(2) do |config|
       config.vm.provision "shell", inline: "chmod 755 /tmp/nomad.sh"
 
       config.vm.provision "shell" , inline: $script
-      config.vm.provision "shell" do |c|
-           c.inline = "/usr/bin/sudo /tmp/consul.sh #{opts[:eth1]} #{join_string}"
-      end
-      config.vm.provision "shell" do |d|
-           d.inline = "/usr/bin/sudo /tmp/nomad.sh #{opts[:eth1]} #{join_string}"
-      end
+      config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/consul.sh #{opts[:eth1]} #{join_string}"
+      config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/nomad.sh #{opts[:eth1]} #{join_string}"
+      config.vm.provision "shell" , inline: "/usr/bin/sudo echo export NOMAD_ADDR=http://#{opts[:eth1]}:4646 >> .bash_profile"
       config.vm.network :private_network, ip: opts[:eth1]
-      
+      if idx == 0
+           config.vm.provision "file", source: "templates/hashiui.sh", destination: "/tmp/hashiui.sh" 
+           config.vm.provision "shell", inline: "chmod 755 /tmp/hashiui.sh"
+           config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/hashiui.sh #{opts[:eth1]}"
+           # Update your bridge as appropriate
+           config.vm.network :public_network, bridge: "enp2s0f0"
+           config.vm.network "forwarded_port", guest: 3000, host: 3000, protocol: "tcp"
+       end
     end
   end
 end
