--- a/aws/hashi-porx/vagrant/Vagrantfile
+++ b/aws/hashi-porx/vagrant/Vagrantfile
@@ -8,20 +8,10 @@ DISK_SIZE = 15*1024
 HDD = "sdc"
 
 boxes = [
-    {
-        :name => "srv1",
-        :eth1 => "192.168.205.10"
-    },
-    {
-        :name => "srv2",
-        :eth1 => "192.168.205.11"
-    },
-    {
-        :name => "srv3",
-        :eth1 => "192.168.205.12"
-    }
+    { :name => "srv1", :eth1 => "192.168.205.10" },
+    { :name => "srv2", :eth1 => "192.168.205.11" },
+    { :name => "srv3", :eth1 => "192.168.205.12" }
 ]
-
 
 $script = <<SCRIPT
 
@@ -77,17 +67,15 @@ Vagrant.configure(2) do |config|
       config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/nomad.sh #{opts[:eth1]} #{join_string}"
       config.vm.provision "shell" , inline: "/usr/bin/sudo echo export NOMAD_ADDR=http://#{opts[:eth1]}:4646 >> .bash_profile"
       config.vm.network :private_network, ip: opts[:eth1]
-      if idx == 0
+      if idx == boxes.size - 1
            config.vm.provision "file", source: "templates/hashiui.sh", destination: "/tmp/hashiui.sh" 
            config.vm.provision "shell", inline: "chmod 755 /tmp/hashiui.sh"
            config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/hashiui.sh #{opts[:eth1]}"
            # Update your bridge as appropriate
            # config.vm.network :public_network, bridge: "enp2s0f0"
            config.vm.network "forwarded_port", guest: 3000, host: 3000, protocol: "tcp"
-       end
-       if idx == boxes.size - 1
            config.vm.provision "file", source: "jobs/px.nomad", destination: "/tmp/px.nomad" 
-           config.vm.provision "shell" , inline: "sleep 10"
+           config.vm.provision "shell" , inline: "echo Waiting for cluster to come up ; sleep 10"
            config.vm.provision "shell" , inline: "NOMAD_ADDR=http://#{opts[:eth1]}:4646 nomad run /tmp/px.nomad"
            puts "Hashi UI will be available at http://#{`echo -n \`hostname\``}:3000"
        end
