--- a/aws/hashi-porx/vagrant/Vagrantfile
+++ b/aws/hashi-porx/vagrant/Vagrantfile
@@ -71,13 +71,12 @@ Vagrant.configure(2) do |config|
            config.vm.provision "file", source: "templates/hashiui.sh", destination: "/tmp/hashiui.sh" 
            config.vm.provision "shell", inline: "chmod 755 /tmp/hashiui.sh"
            config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/hashiui.sh #{opts[:eth1]}"
-           # Update your bridge as appropriate
-           # config.vm.network :public_network, bridge: "enp2s0f0"
            config.vm.network "forwarded_port", guest: 3000, host: 3000, protocol: "tcp"
-           config.vm.provision "file", source: "jobs/px.nomad", destination: "/tmp/px.nomad" 
-           config.vm.provision "shell" , inline: "echo Waiting for cluster to come up ; sleep 10"
-           config.vm.provision "shell" , inline: "NOMAD_ADDR=http://#{opts[:eth1]}:4646 nomad run /tmp/px.nomad"
-           puts "Hashi UI will be available at http://#{`echo -n \`hostname\``}:3000"
+           # config.vm.provision "file", source: "jobs/px.nomad", destination: "/tmp/px.nomad" 
+           # config.vm.provision "shell" , inline: "echo Waiting for cluster to come up ; sleep 10"
+           # config.vm.provision "shell" , inline: "NOMAD_ADDR=http://#{opts[:eth1]}:4646 nomad run /tmp/px.nomad"
+           hostname=`hostname`
+           puts "Hashi UI will be available at http://#{hostname}:3000"
        end
     end
   end
