--- a/hashi-porx/vagrant/Vagrantfile
+++ b/hashi-porx/vagrant/Vagrantfile
@@ -23,7 +23,7 @@ sudo apt-get -y install wget unzip
 if ! docker --version > /dev/null 2>&1
 then
    echo "Installing Docker..."
-   curl -fsL http://get.docker.com | sh
+   curl -fsSL https://get.docker.com | sh
    sudo systemctl daemon-reload
    sudo systemctl enable docker
    sudo systemctl start docker
@@ -69,7 +69,7 @@ Vagrant.configure(2) do |config|
       config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/consul.sh #{opts[:eth1]} #{join_string}"
       config.vm.provision "shell" , inline: "/usr/bin/sudo /tmp/nomad.sh #{opts[:eth1]} #{join_string}"
       config.vm.provision "shell" , inline: "/usr/bin/sudo echo export NOMAD_ADDR=http://#{opts[:eth1]}:4646 >> .bash_profile"
-      config.vm.provision "shell", inline: "curl -fsL http://get.portworx.com:8080 | sh -s -- -c #{clusterID} -k 'consul:http://127.0.0.1:8500' -a -f -m enp0s8 -d enp0s8"
+      config.vm.provision "shell", inline: "curl -fsSL https://get.portworx.com | sh -s -- -c #{clusterID} -k 'consul:http://127.0.0.1:8500' -a -f -m enp0s8 -d enp0s8"
       config.vm.network :private_network, ip: opts[:eth1]
       if idx == boxes.size - 1
            config.vm.provision "file", source: "templates/hashiui.sh", destination: "/tmp/hashiui.sh" 
