--- a/automation/ansible/portworx/roles/portworx/vars/main.yml
+++ b/automation/ansible/portworx/roles/portworx/vars/main.yml
@@ -3,7 +3,6 @@
 # For full list of command line arguments, please see:
 # https://docs.portworx.com/runc/options.html
 kvdb : ""
-data_if : "eth1"
-mgmt_if : "eth1"
-cluster_id : "{{ hostvars['localhost']['clusterID'].stdout }}"
-#  CID : "{{ hostvars['localhost']['clusterID'].stdout }}"
+data_if : "-d eth1"
+mgmt_if : "-m eth1"
+cluster_id : " -c {{ hostvars['localhost']['clusterID'].stdout }}"
